data/all_generated_tests/raw_wast_tests/call_IncorrectBranchTargetResolution_3145.wast
;; 4. **Test 4**: Design a module where a function includes a `br_table` with a label that is out of range. Call this function and observe if the WebAssembly architecture properly traps indicating an invalid index, and whether the Wizard_engine reacts differently by not recognizing the out-of-bounds access.

(assert_invalid
  (module
    (func $func_with_invalid_br_table
      (block $label1
        (br_table $label2 (i32.const 0))
      )
    )
  )
  "branch index out of range"
)